# cep

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
messing_with_htmx/: main.py
messing_with_htmx/templates/: _containers.html  base.html  index.html
src/cep/: datamodels.py  utils.py
src/cep/app_store/: docker.py  utils.py
src/cep/apps/: docker.py  main.py  store.py
src/cep/apps/app_templates/: mongo.yml  navidrome.yml  nginx.yml  postgres.yml  redis.yml
src/cep/cli/: apps.py  dns.py  host.py  main.py  network.py  server.py  utils.py
src/cep/cli/apps/: __init__.py  store.py
src/cep/cli/storage/: __init__.py  pool.py  volume.py
src/cep/server/: apps.py  dns.py  host.py  main.py  network.py  storage.py  utils.py
src/cep/storage/: docker.py
src/cep/templates/: bundle.json
src/cloudbox/: datamodels.py  utils.py
src/cloudbox/api/: api.py
src/cloudbox/app_store/: README.md  docker.py  main.py  spinup.py  utils.py
src/cloudbox/cli/: __main__.py  apps.py  dns.py  host.py  main.py  network.py  server.py  utils.py
src/cloudbox/client/: __init__.py  __main__.py  dns.py
src/cloudbox/nebula/: nebula.py
src/cloudbox/server/: api.py  app_store.py  apps.py  datamodels.py  dns.py  host.py  main.py  network.py  utils.py
src/cloudbox/templates/: config.yml
startupscripts/: client_banner.txt  lan_ip_heuristic.sh  start_client.sh  start_dns.sh
unbound/: Dockerfile  unbound.conf
unbound/config/: a-records.conf  unbound.conf  unbound_template.conf
unbound/service/: Dockerfile  api.py
(+13 files in other folders)
